--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -2,7 +2,6 @@
 
 ~CONFIG_VERSION: 11
 
-
 arrows {
     # If set to true, this setting fixes the bug where Tipped Arrows do not have a damage source. This fix allows Tipped Arrows to have their damage increased through player enchantments that increase Magic Damage, for example. [default: true]
     B:"Add Damage Source To Tipped Arrows"=true
@@ -361,6 +360,9 @@ other {
     # Set to true to disable weapon fatigue from Spartan Weaponry, this mod instead handles two-handed and versatile weapons. [default: true]
     B:"Cancel Spartan Weaponry Fatigue"=true
 
+    # Cut grass when attacking, disable to prevent grief on protection servers. [default: true]
+    B:"Cut Grass"=true
+
     # If set to true, shoveling grass paths requires an animation. Shovels with a faster attack speed will path land faster. [default: true]
     B:"Digging Grass Paths Requires Animation"=true
 
@@ -514,7 +516,7 @@ sound {
 swords {
     # Adjust the Attack Speed of vanilla swords.
     # 
-    # This is setting only for vanilla swords! The mod 'Material Changer' allows you change the Attack Speed on all weapons (except swords).
+    # This setting only for vanilla swords! The mod 'Material Changer' allows you change the Attack Speed on all weapons except swords.
     # If a mod does not allow you to adjust the Attack Speed on their custom modded swords, you may use this config to do so.
     # The [Sword Substring] field can be simply '_sword' so that all weapons containing the word '_sword' will be affected, such as 'minecraft:diamond_sword' or 'minecraft:iron_sword'
     # If you would rather adjust properties of a specific sword, you may put the resource path such as 'diamond_sword' (do not include the resource domain such as 'minecraft:')
@@ -596,18 +598,20 @@ visual {
     # How fast items move up and down for the breathing animation. [range: 0.0 ~ 1.0, default: 0.02]
     S:"Breathing Animation Intensity"=0.025
 
-    # How far items move up and down for the breathing animation. [range: 0.0 ~ 1.0, default: 0.1]
+    # How far items move up and down for the breathing animation. [range: 0.0 ~ 1.0, default: 0.02]
     S:"Breathing Animation Speed"=0.040
 
-    # This value controls the up-and-down (vertical) rotation of the camera when you swing a weapon. May cause slight motion sickness if set too high. Set to 0.0F to disable. [range: 0.0 ~ 1.0, default: 0.08]
+    # This value controls the left-to-right (horizontal) rotation of the camera when you swing a weapon. May cause slight motion sickness if set too high. Set to 0.0F to disable. [range: 0.0 ~ 1.0, default: 0.16]
+    S:"Camera Horizontal Swing"=0.16
     S:"Camera Pitch Swing"=0.09
+
+    # This value controls the up-and-down (vertical) rotation of the camera when you swing a weapon. May cause slight motion sickness if set too high. Set to 0.0F to disable. [range: 0.0 ~ 1.0, default: 0.06]
+    S:"Camera Vertical Swing"=0.06
     B:"Damage Particles"=true
 
     # Inverse the angle for Damage Tilt for blocking and parrying. [default: true]
     B:"Inverse Blocking/Parrying Tilt"=true
     B:"More Attack Hit Particles"=true
-
-    # This value controls the left-to-right (horizontal) rotation of the camera when you swing a weapon. May cause slight motion sickness if set too high. Set to 0.0F to disable. [range: 0.0 ~ 1.0, default: 0.2]
     S:"Rotation Yaw Swing"=0.18
 
     # Set to true to completely disable the new crosshair, and show the default crosshair. The attack energy/cooldown indicator can also be enabled/disabled in the Minecraft settings. [default: false]
@@ -630,7 +634,7 @@ visual {
      >
 
     # (Class) Item Blacklist.
-    # Blacklisted item classes. This setting allows the items to have their default left-click and right-click functionality. This is an advanced setting, as it requires you to look through the source code of the mod that you are trying to add the class from. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:    com.flansmod.common.guns.ItemGun    com.mrcrayfish.guns.item.ItemGun    techguns.items.guns.GenericGun    com.paneedah.mwc.weapons.Guns    com.jozufozu.yoyos.common.ItemYoyo [default: ]
+    # Blacklisted item classes. This setting allows the items to have their default left-click and right-click functionality. This is an advanced setting, as it requires you to look through the source code of the mod that you are trying to add the class from. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:    vazkii.akashictome.TomeItem    com.flansmod.common.guns.ItemGun    com.mrcrayfish.guns.item.ItemGun    techguns.items.guns.GenericGun    com.paneedah.mwc.weapons.Guns    com.jozufozu.yoyos.common.ItemYoyo [default: ]
     S:"(Class) Item Left/Right Click Blacklist" <
      >
 
