--- a/config/dynaores.cfg
+++ b/config/dynaores.cfg
@@ -43,6 +43,9 @@ general {
     # Ores that are counted as the same types as each other separated by "-", e.g Magnetite-Iron will make ores with the name oreMagnetite be treated as oreIron for the purposes of raw ore generation and dropping.
     S:otherNames <
      >
+
+    # Should the mod add block variants for all raw ore entries?
+    B:rawOreBlocks=true
 }
 
 
