--- a/config/endermodpacktweaks/minecraft.cfg
+++ b/config/endermodpacktweaks/minecraft.cfg
@@ -10,53 +10,48 @@ client {
     # Enable tweaks for the client.
     B:"[01] Enable Client Tweaks"=true
 
-    # This tweak disables the crafting grid in the player inventory.
-    # Useful for modpacks that want to make the player use a crafting table
-    # or want to realize crafting in a different way.
-    B:"[02] Disable Inventory Crafting"=false
-
     # This tweak disables the rendering of item names above the hotbar.
-    B:"[03] Disable Item Names"=false
+    B:"[02] Disable Item Names"=false
 
     # Set the maximum render distance of the client.
     # I'm not responsible for any performance issues this may cause.
     # nor if your pc goes up in flames. (The Minecraft default is 16)
     # Min: 2
     # Max: 4096
-    I:"[04] Max Render Distance"=32
+    I:"[03] Max Render Distance"=32
 
     # Hide the name tags of entities.
-    B:"[05] Hide Name Tags"=true
+    B:"[04] Hide Name Tags"=true
 
     # Disable the auto jump feature. It never should have been added in the first place.
-    B:"[06] Disable Auto Jump"=false
+    B:"[05] Disable Auto Jump"=false
 
     # Adds an additional master volume slider to the main options menu.
-    B:"[07] Additional Master Volume"=true
+    B:"[06] Additional Master Volume"=true
 
     # Hide the potion icons in the top right corner.
-    B:"[08] Hide Potion Icons"=false
+    B:"[07] Hide Potion Icons"=false
 
     # Hide the crosshair.
-    B:"[09] Hide Crosshair"=false
+    B:"[08] Hide Crosshair"=false
 
     # Hide the armor bar.
-    B:"[10] Hide Armor Bar"=false
+    B:"[09] Hide Armor Bar"=false
 
     # Hide the health bar.
-    B:"[11] Hide Health Bar"=false
+    B:"[10] Hide Health Bar"=false
 
     # Hide the hunger bar.
-    B:"[12] Hide Hunger Bar"=false
+    B:"[11] Hide Hunger Bar"=false
 
     # Hide the experience bar.
-    B:"[13] Hide Experience Bar"=false
+    B:"[12] Hide Experience Bar"=false
 
     # Hide the air bar.
-    B:"[14] Hide Air Bar"=false
+    B:"[13] Hide Air Bar"=false
 
     # Disable the FOV change.
-    B:"[15] Disable FOV Change"=false
+    B:"[14] Disable FOV Change"=false
 }
 
 
@@ -208,6 +203,42 @@ end_portal {
 
 
 ##########################################################################################################
+# golem
+#--------------------------------------------------------------------------------------------------------#
+# Tweaks for the Golem Spawning Mechanic.
+##########################################################################################################
+
+golem {
+    # Enable tweaks for the Golem Spawning Mechanic.
+    B:"[01] Enable Golem Tweaks"=false
+
+    # Disable the spawning of Iron Golems.
+    B:"[02] Disable Iron Golem Spawning"=false
+
+    # Disable the spawning of Snow Golems.
+    B:"[03] Disable Snow Golem Spawning"=false
+}
+
+
+##########################################################################################################
+# inventory_crafting
+#--------------------------------------------------------------------------------------------------------#
+# Tweak the Inventory Crafting mechanic.
+##########################################################################################################
+
+inventory_crafting {
+    # Enable tweaks for the inventory crafting.
+    B:"[01] Enable Inventory Crafting Tweaks"=false
+
+    # Disable the crafting grid in the player inventory.
+    B:"[02] Disable Crafting Grid"=false
+
+    # Unlock the crafting grid via a game stage.
+    S:"[03] Unlock via Game Stage"=unlock_crafting_grid
+}
+
+
+##########################################################################################################
 # nether_portal
 #--------------------------------------------------------------------------------------------------------#
 # Tweak the Nether Portal to your liking.
@@ -215,7 +246,7 @@ end_portal {
 
 nether_portal {
     # Enable Nether Portal Tweaks
-    B:"[01] Nether Portal Tweaks"=false
+    B:"[01] Nether Portal Tweaks"=true
 
     # Allow Nether Portal Creation
     B:"[02] Nether Portal Creation"=false
@@ -285,6 +316,21 @@ obsidian_spike {
     # Min: 0
     # Max: 100
     I:"[12] Obsidian Spike Guard Chance"=5
+}
+
+
+##########################################################################################################
+# wither
+#--------------------------------------------------------------------------------------------------------#
+# Tweaks for the Wither Boss.
+##########################################################################################################
+
+wither {
+    # Enable tweaks for the Wither Boss.
+    B:"[01] Enable Wither Tweaks"=false
+
+    # Disallow players to build the Wither Boss.
+    B:"[02] Disable building the Wither"=false
 }
 
 
