--- a/config/endermodpacktweaks/tweaks.cfg
+++ b/config/endermodpacktweaks/tweaks.cfg
@@ -9,6 +9,9 @@
 arcane_world {
     # This fixes the lag in the other dimensions.
     B:"[01] Enable Arcane World Tweaks"=false
+
+    # Allow disabling the Levitator with a redstone signal.
+    B:"[02] Levitator accepts Redstone"=false
 }
 
 
@@ -24,6 +27,27 @@ astral_sorcery {
 
     # Allow Fake Players to interact with the Astral Sorcery mod.
     B:"[02] Allow Fake Players"=false
+}
+
+
+##########################################################################################################
+# beneath
+#--------------------------------------------------------------------------------------------------------#
+# https://www.curseforge.com/minecraft/mc-mods/the-beneath
+##########################################################################################################
+
+beneath {
+    # Enable tweaks for the Beneath mod.
+    B:"[01] Enable Beneath Tweaks"=false
+
+    # Disable the darkness effect in the Beneath dimension.
+    B:"[02] Disable Darkness Effect"=false
+
+    # Disable the darkness effect while having one of the following items equipped:
+    # Format: modid:itemid[:metadata]
+    # Example: minecraft:diamond_helmet
+    S:"[03] Disable Darkness Effect Immunity" <
+     >
 }
 
 
@@ -395,6 +419,21 @@ matter_overdrive {
 
     # Always show the matter info without sneaking.
     B:"[02] Always Show Matter Info"=false
+}
+
+
+##########################################################################################################
+# morph
+#--------------------------------------------------------------------------------------------------------#
+# https://www.curseforge.com/minecraft/mc-mods/morph
+##########################################################################################################
+
+morph {
+    # Enable tweaks for the Morph mod.
+    B:"[01] Enable Morph Tweaks"=false
+
+    # Repalce the 'FlapFlight' ability with the 'Fly' ability, which is much better.
+    B:"[02] Override crappy flight"=false
 }
 
 
