--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -265,6 +265,7 @@ general {
         B:"Enable Lockdown Patch"=true
         B:"Enable Logistics Pipes Patch"=true
         B:"Enable MAGE (Graphical Tweaks) Patch"=true
+        B:"Enable Mo'Bends Patch"=true
         B:"Enable More Player Model Patch"=true
         B:"Enable More Refined Storage Patch"=true
         B:"Enable NBT Peripheral Patch"=true
@@ -296,9 +297,11 @@ general {
 
         # This patches the CraftPresence spam log
         B:"Enable Unilib Patch"=true
+        B:"Enable Unvalkyried Heavens Patch"=true
         B:"Enable Valkyrie Patch"=true
         B:"Enable Vampirism Patch"=true
         B:"Enable Water Power Patch"=true
+        B:"Enable Wireless Utilities Patch"=true
 
         # Should be compatible with better hurt time
         B:"Enable Worse Hurt Time Patch"=true
