--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -43,6 +43,9 @@ general {
     "charm config" {
         # Adds and registers the Cleansing Talisman, a recipe for crafting a Curse Break book, and the Curse Break potion
         B:"Cleansing Talisman (Charm)"=false
+
+        # Makes the ender sight potion use the vanilla enderman invert shader rather than a custom slightly-off shader
+        B:"Ender Sight Render Fix (Charm)"=false
     }
 
     "chunkanimator config" {
@@ -214,6 +217,9 @@ general {
         # Adds and registers Scarlite armor with custom models
         B:"Scarlite Armor"=false
 
+        # Adds bouncy sides to slime blocks similar to Quark's feature but much less laggy
+        B:"Slime Block Bouncy Sides"=false
+
         # Adds and registers Steel armor with custom models
         B:"Steel Armor"=false
     }
@@ -314,6 +320,14 @@ general {
     }
 
     "scalinghealth config" {
+        # Allows giving blights additional constantly active potion effects
+        B:"Additional Blight Potion Effects (ScalingHealth)"=false
+
+        # The potion effects to apply on blights (Format: modid:potionname, amplifier)
+        # Requires "Additional Blight Potion Effects (ScalingHealth)" enabled
+        S:"Additional Blight Potion Effects List" <
+         >
+
         # Fixes the bandaged effect not having an icon
         B:"Bandaged Icon Fix (ScalingHealth)"=false
 
@@ -372,6 +386,13 @@ general {
     "vanilla config" {
         # Skips BlockConcretePowder from running onBlockAdded during worldgen for performance
         B:"ConcretePowder Skip OnBlockAdded (Vanilla)"=true
+
+        # Makes zombie villagers keep their trades throughout zombification and curing
+        B:"Cured Zombie Villagers Keep Trades (Vanilla)"=false
+
+        # Chance on curing zombie villagers to increase their prices and/or remove xp from some of their trades, per trade
+        # Requires "Cured Zombie Villagers Keep Trades (Vanilla)" enabled
+        D:"Curing Trauma Chance (Vanilla)"=0.0
     }
 
 }
