--- a/config/endermodpacktweaks/modpack.cfg
+++ b/config/endermodpacktweaks/modpack.cfg
@@ -19,6 +19,22 @@ crash_info {
 
 
 ##########################################################################################################
+# custom_assets
+#--------------------------------------------------------------------------------------------------------#
+# Utilize the AssetMover API to move assets from CurseForge or other Minecraft versions to your modpack.
+##########################################################################################################
+
+custom_assets {
+    # Enable the Custom Assets feature.
+    B:"[01] Enable Custom Assets"=false
+
+    # List of paths to JSON files that contain the asset information. All paths are relative to the instance folder.
+    S:"[02] AssetMover JSON files" <
+     >
+}
+
+
+##########################################################################################################
 # customization
 #--------------------------------------------------------------------------------------------------------#
 # Customize the game window.
@@ -45,6 +61,9 @@ customization {
 
     # Override the path to the icon.
     S:"[05] Window icon path"=config/endermodpacktweaks/icon.png
+
+    # Remove the 'Java Edition' text from the main menu.
+    B:"[06] Remove 'Java Edition' from Main Menu"=false
 }
 
 
