--- a/config/dynaores.cfg
+++ b/config/dynaores.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # Should the mod automatically add smelting recipes for all raw ores into ingots?
+    B:addSmelting=true
+
     # Which ores shouldn't have variants generated for them?
     S:blacklist <
         Copper
@@ -15,7 +18,7 @@ general {
     # Can ores be fortuned to drop more raw ores?
     B:canFortune=true
 
-    # Names of ores and a colour (either in an integer format e.g. or a hex format e.g. 0xD83FFF, if not specified the colour will be white) separated by "-", e.g. Chalcopyrite-0x967025 or Cinnabar-8850958
+    # Names of ores and a colour (either in an integer format e.g. or a hex format e.g. 0xD83FFF, if not specified the colour will be white) separated by "-", can also specify an item to be the "ingot" that it smelts into, e.g. Cinnabar-8850958, Chalcopyrite-0x967025-thermalfoundation:material:128
     S:customOres <
      >
 
