--- a/config/endermodpacktweaks/features.cfg
+++ b/config/endermodpacktweaks/features.cfg
@@ -351,6 +351,21 @@ mob_health_bar {
     S:"[36] Mob Blacklist" <
         ArmorStand
      >
+
+    # Enable instancing (a rendering technique) if the OpenGL version requirement and several conditions are met
+    B:"[37] Health Bar Instancing"=true
+
+    # Max number of instanced health bars
+    I:"[38] Max Instancing Count"=100
+
+    # Enable smooth health bar animation
+    B:"[39] Smooth Health Bar Animation"=true
+
+    # Animation smooth time
+    D:"[40] Health Bar Animation Smooth Time"=0.30000001192092896
+
+    # Should a Name Tag icon be shown next to the name if the mob has a custom name?
+    B:"[41] Indicate Custom Name"=true
 }
 
 
