--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -21,6 +21,17 @@ general {
         org.vivecraft.
      >
 
+    # Guava now use a new method with a different desc. Should be rare so normally you don't need to modify this.
+    S:"Futures.addCallback Patching List" <
+        moe.plushie.armourers_workshop.common.library.global.GlobalSkinLibraryUtils
+        moe.plushie.armourers_workshop.common.library.global.task.GlobalTask
+        com.rwtema.extrautils2.transfernodes.TileIndexer
+        com.rwtema.extrautils2.transfernodes.TransferNodeEnergy
+        fi.dy.masa.litematica.render.schematic.ChunkRenderWorkerLitematica
+        com.replaymod.simplepathing.gui.GuiPathing
+        com.replaymod.simplepathing.gui.GuiPathing$10
+     >
+
     # Mods like Apotheosis is casting AppClassLoader to URLClassLoader for getting its URLs.
     # This will crash in newer Java, because AppClassLoader is no longer a URLClassLoader.
     # Targets class here will be patched to new method we provide.
@@ -61,11 +72,6 @@ general {
         openeye.logic.ModMetaCollector
         com.forgeessentials.core.preloader.asminjector.ASMUtil
      >
-
-    # Used when mouse wheel related operation being weird.
-    # Classes in this list will get their Mouse.getDWheel() and Mouse.getEventDWheel() redirected.
-    # Consult Cleanroom developers before using it!
-    # 
     S:"Mouse.getEventDWheel() Patching List" <
         mekanism.client.ClientTickHandler
         journeymap.client.ui.fullscreen.Fullscreen
@@ -149,6 +155,16 @@ general {
         com.Shultrea.Rin.Utility_Sector.LivingAttackFixerHandler
      >
 
+    # Newer Java now has concurrent check in this method. Should be rare so normally you don't need to modify this.
+    S:"computeIfAbsent Patching List" <
+        hellfirepvp.astralsorcery.common.constellation.perk.attribute.PerkAttributeType
+        com.rwtema.extrautils2.backend.XUBlockStatic$3
+        mcjty.incontrol.rules.RuleCache$CachePerWorld
+        com.lordmau5.repack.net.covers1624.model.LayeredTemplateModel$ModelBlockWrapper
+        com.infinityraider.infinitylib.render.block.BakedInfBlockModel
+        net.blay09.mods.refinedrelocation.block.BlockSortingConnector
+     >
+
     # ITweaker classes loaded in LCL will be defined in a different code source like file:jar:.
     # This will cause errors like java.lang.IllegalArgumentException: URI is not hierarchical
     # Add them to list could redirect their toURI() to a decent jar URL.
@@ -202,6 +218,12 @@ general {
         # This patch is only for Advanced Rocketry by zmaster587.
         # Advanced Rocketry - Reworked by MarvinEckhardt doesn't need this!
         B:"Enable Advanced Rocketry Patch"=false
+
+        # Using Apache http4 for game analytics. The URL is shutdown now so just removed it.
+        B:"Enable Aether II Patch"=true
+
+        # Bad Apache httpclient4 user, had to patch with dirty trick.
+        B:"Enable All Music Patch"=true
         B:"Enable Aqua Acrobatics Patch"=true
         B:"Enable Armourer's Workshop Patch"=true
         B:"Enable Astral Sorcery Patch"=true
@@ -244,6 +266,7 @@ general {
         B:"Enable Forge Endertech Patch"=true
         B:"Enable Funky Locomotion"=true
         B:"Enable Funky Locomotion Patch"=true
+        B:"Enable Gliby's Physics Patch"=true
 
         # This gtceu patch is temporary. An official fix is pending.
         B:"Enable GregTechCE Unofficial Patch"=true
@@ -265,6 +288,8 @@ general {
         B:"Enable Lockdown Patch"=true
         B:"Enable Logistics Pipes Patch"=true
         B:"Enable MAGE (Graphical Tweaks) Patch"=true
+
+        # Has a whole http4 helper class to interact with server.
         B:"Enable Mo'Bends Patch"=true
         B:"Enable More Player Model Patch"=true
         B:"Enable More Refined Storage Patch"=true
@@ -275,6 +300,9 @@ general {
         B:"Enable Patch to PolyForst mods"=true
         B:"Enable Patchouli Patch"=true
         B:"Enable Project Red Patch"=true
+
+        # Using Apache http for json getting. Totally pointless since you don't need a lib to do this.
+        B:"Enable Random Title Patch"=true
         B:"Enable Recurrent Complex Patch"=true
         B:"Enable Refined Relocation 2 Patach"=true
         B:"Enable ReplayMod Patch"=true
