--- a/config/Universal Tweaks - Tweaks.cfg
+++ b/config/Universal Tweaks - Tweaks.cfg
@@ -260,7 +260,7 @@ general {
         # Replaces auto jump with an increased step height (singleplayer only)
         B:"Auto Jump Replacement"=true
 
-        # Enables ignition of entities by right-clicking instead of awkwardly lighting the block under them
+        # Enables ignition of entities by right-clicking flint and steel instead of awkwardly lighting the block under them
         B:"Better Ignition"=true
 
         # Sets the acceleration value for controlling boats
@@ -1327,6 +1327,7 @@ general {
         B:"Disable Audio Debug"=true
 
         # Improves rendering performance by removing the resource location text on missing models
+        # Incompatible with HBM's Nuclear Tech Mod
         B:"Disable Fancy Missing Model"=true
 
         # Improves rendering performance by disabling rendering the entity inside mob spawners
@@ -1350,7 +1351,6 @@ general {
         B:"Faster Background Startup"=true
 
         # Improves the speed of switching languages in the Language GUI
-        # Incompatible with OptiFine
         B:"Improve Language Switching Speed"=false
 
         # Improves the speed of connecting to servers by setting the InetAddress host name to the IP in situations
@@ -1369,6 +1369,10 @@ general {
 
         # Disables lighting of active redstone, repeaters, and comparators to improve performance
         B:"No Redstone Lighting"=true
+
+        # Increases the size of the texture atlas as large as the GPU actually supports
+        # Has no effect when Valkyrie is installed
+        B:"Texture Atlas Size"=true
 
         # Removes the hardcoded 30 FPS limit in screens like the main menu
         B:"Uncap FPS"=true
