--- a/config/ZenUtils.cfg
+++ b/config/ZenUtils.cfg
@@ -1,6 +1,24 @@
 # Configuration file
 
 general {
+    # Allow script to access other scripts loaded by previous loaders. The config is only effective when fastScriptLoading is enabled. Default: false
+    B:crossLoaderAccess=false
+
+    # Allow insertion of zs execution during mod loading stage
+    # Format: scriptLoaderName;modid;stageMarker;before|after
+    # Valid stage marker: C (Construction) H (Preinit) I (Init) J (Postinit) A (Available)
+    # Example: custom;mekanism;J;before -> runs `#loader custom` scripts before mekanism runs its code on post-initialization stage
+    # Note: 
+    # 1. On construction stage and preinit stage before crafttweaker, only native methods are available
+    # 2. Many recipe modifications are staged. For example, scripts are loaded on init, but recipe modifications for crafting table and furnace are staged on postinit
+    #    It means recipe modifications MAY NOT be executed after their loading stage
+    #    ZenUtils will re-execute crafttweaker recipe modifications after all custom script load entrypoint on POSTINIT, but other crafttweaker addons not
+    S:customScriptEntrypoint <
+     >
+
+    # Disable mixin script reload warning. Default: false
+    B:disableMixinScriptReloadWarning=false
+
     # Enable mixinzs. Default: false
     B:enableMixin=true
 
