--- a/config/fermiummixins.cfg
+++ b/config/fermiummixins.cfg
@@ -481,7 +481,13 @@ general {
         # Patches Quarks Ender Watcher to greatly improve performance
         B:"Ender Watcher Performance Patch (Quark)"=true
 
-        # Increases performance of Monster Boxes looking for players nearby to activate
+        # Allows for setting how many ticks the ender watcher should take before updating
+        # Requires "Ender Watcher Performance Patch (Quark)" enabled
+        # Min: 1
+        # Max: 2147483647
+        I:"Ender Watcher Tick Rate (Quark)"=1
+
+        # Increases performance of Monster Boxes looking for players nearby to activate, and prevents creative mode from triggering the box
         B:"Monster Box Check Player Performance (Quark)"=true
 
         # Fixes Quark's armor rune enchantment glint not working when Optifine is installed
@@ -510,6 +516,9 @@ general {
         # Forces Quark's Right-Click sign edit to sync the config value from server to client to prevent desyncs, thanks to Venom
         B:"Sync Sign Edit Config (Quark)"=true
 
+        # Increases performance of revamped stone gen and underground biome generation
+        B:"Underground Gen Performance Fix (Quark)"=true
+
         # Keeps Quark Usage Ticker rendered instead of fading out
         B:"Usage Ticker Forced Visible (Quark)"=false
     }
@@ -537,8 +546,18 @@ general {
         # Fixes player data being reset when returning from the end, causing baubles with level requirements to be lost
         B:"Player Tracking Patch (Reskillable)"=false
 
-        # Reworks RoadWalk perk to be active anywhere exposed to sky instead of only on grass path blocks
+        # Blocks defined in this list will trigger the road walk effect when walked on
+        # Requires "RoadWalk Rework (Reskillable)" enabled
+        S:"RoadWalk Block List" <
+            minecraft:grass_path
+         >
+
+        # Reworks road walk perk to be based on a configurable list instead of only on grass path blocks
         B:"RoadWalk Rework (Reskillable)"=false
+
+        # If enabled, allows for the road walk effect to be triggered when exposed to the sky regardless of the block underneath
+        # Requires "RoadWalk Rework (Reskillable)" enabled
+        B:"RoadWalk Sky Override"=false
 
         # Allows skill locked plantable food to still be eaten but not planted
         B:"SeedFood Bypass Lock (Reskillable)"=false
@@ -572,6 +591,9 @@ general {
         # Makes curing Zombie Villagers and Pig lightning conversions count as a kill for spawners
         B:"Curing/Conversion Ticks Spawners (MobSpawnerControl)"=false
 
+        # Makes Lycanites entities that transform into new entities (fusion and others) count as a kill for spawners
+        B:"Lycanites Transforming Ticks Spawners (MobSpawnerControl/LycanitesMobs)"=false
+
         # After a spawner is broken, prevents mob drops after a certain threshold of kills is reached to prevent farming exploits
         B:"Spawner Farming Fix (MobSpawnerControl)"=false
 
@@ -581,6 +603,9 @@ general {
     }
 
     "switchbow config" {
+        # Fixes Arrow Launcher's fake entity returning null ItemStacks when queried for held items
+        B:"Arrow Launcher Null Stack Fix (Switchbow)"=false
+
         # Removes the arrow refund when hitting animals already in love
         B:"Love Arrow Dupe Fix (Switchbow)"=false
 
@@ -616,8 +641,14 @@ general {
         # Adds a blacklist to prevent certain potion effects from working on tipped arrows
         B:"Allow Tipped Arrow Blacklist (Vanilla)"=false
 
+        # Prints when automatic world saving starts and ends to the log, along with time taken, for better clarity during lag spikes
+        B:"Automatic Save Logging (Vanilla)"=false
+
         # Attempts to return items to the player's inventory on closing beacon/merchant guis instead of dropping them on the ground
         B:"Beacon/Merchant GUI Item Drop Fix (Vanilla)"=false
+
+        # Fixes Optifine adding reflection to block storage methods causing wasted performance
+        B:"Block Storage Optifine Lag Fix (Vanilla)"=true
 
         # Disallows boss mobs from entering minecarts and boats
         # Additionally disallows Infernal/Blight/Champion mobs if InfernalMobs/ScalingHealth/Champions is loaded
@@ -633,6 +664,10 @@ general {
 
         # Cache the player's chunk position to not refresh the visible chunk list every tick to save on memory allocation
         B:"Chunk Visibility Cache (Vanilla)"=true
+
+        # Adjusts the client thread priority to high (8) to potentially improve performance when other less important threads are taking up resources
+        # Warning: It is highly recommended you only enable this if "Server Thread Priority Tweak (Vanilla)" is also enabled to avoid degrading server thread performance
+        B:"Client Thread Priority Tweak (Vanilla)"=true
 
         # Makes water reduce fall distance per tick instead of forcing distance to 0
         B:"Configurable Water Fall Damage Reduction (Vanilla)"=false
@@ -650,6 +685,9 @@ general {
         # Warning: Do not add this to an existing world/pack without making a backup and testing, any mod modifying blockstate instancing/blockstate registry (Unlikely) will conflict
         # I won't take responsibility for you rolling the dice and nuking your world
         B:"EXPERIMENTAL: BlockState Identity Registry Patch (Vanilla)"=false
+
+        # Fixes server entity velocity being limited when sending velocity update packets to clients, making fast projectiles visibly strafe sideways when shot in specific directions
+        B:"Entity Velocity Limit Fix (Vanilla)"=true
 
         # How many blocks to reduce fall distance by per tick when falling in water
         # Requires "Configurable Water Fall Damage Reduction (Vanilla)" enabled
@@ -808,6 +846,9 @@ general {
             OCEAN
          >
 
+        # Adjusts the server thread priority to max (10) to potentially improve performance when other less important threads are taking up resources
+        B:"Server Thread Priority Tweak (Vanilla)"=true
+
         # Smoothed eye height when crouching, created by RandomPatches
         # Incompatible: RandomPatches
         # Incompatible: AquaAcrobatics
@@ -950,6 +991,11 @@ general {
         S:"Mineshaft Biome Type Blacklist" <
             
          >
+    }
+
+    "incontrol config" {
+        # Fixes Optifine causing InControl to apply spawn actions multiple times to the same entity
+        B:"Fix Spawn Rule Repetition (InControl/Optifine)"=true
     }
 
 }
