fix window title being overrided

--- a/config/endermodpacktweaks/tweaks.cfg
+++ b/config/endermodpacktweaks/tweaks.cfg
@@ -279,7 +279,7 @@ ender_storage {
 
 fancy_menu {
     # Enable tweaks for the Fancy Menu mod.
-    B:"[01] Enable Fancy Menu Tweaks"=false
+    B:"[01] Enable Fancy Menu Tweaks"=true
 }
 
 
