--- a/config/crash_assistant/config.toml
+++ b/config/crash_assistant/config.toml
@@ -18,6 +18,10 @@
 	#If equals CHANGE_ME, will open Forge/NeoForge/Fabric/Quilt discord link. Names of communities/channels also will be used not from config, but according to this link.
 	#Must start with 'https://' or 'www.'
 	help_link = "https://discord.gg/KhkqdKq695"
+	#Unfortunately mclogs censoring ip-like versions as has no way to determine if it's version or IP.
+	#This will prevent this by replacing dot's in them to dot-like symbol.
+	#Anti censoring only versions, IP's are kept censored.
+	enable_mclogs_anti_ip_like_version_censorer = true
 	#Close old CrashAssistantApp if it's still running when starting a new instance of Minecraft, to avoid confusing player with window from old crash.
 	kill_old_app = true
 
@@ -85,7 +89,6 @@
 	#-----------------------------------------------------------------------------------------------------
 	modpack_creators = ["CalaMariGold"]
 	#If enabled, will add generated modlist.txt, with names of all mods / modids / mixin configs / jarjar mods info to logs.
-	#
 	add_modlist_txt_as_log = true
 	#If enabled, will add resourcepacks to modlist.json
 	#After filename where will be ' (resourcepack)' suffix.
@@ -128,6 +131,9 @@
 	#Same as upload_all_button_foreground_color, but for Request Help button.
 	#Default for this button is "0_0_178" (dark blue color).
 	request_help_button_foreground_color = "0_0_178"
+	#Same as upload_all_button_foreground_color, but for Auto-Fix button (in integrated GPU warning).
+	#Default for this button is "0_178_0" (dark green color).
+	auto_fix_button_foreground_color = "0_178_0"
 	#You can make Upload All Button bigger/smaller to request user attention.
 	#Default Swing font size is 12, Default for this button in crash assistant is 16.
 	#Not recommended to set it more than 16, as it will affect the increase of GUI size because all text won't fit.
@@ -138,6 +144,8 @@
 	#format is "R_G_B", range is 0-255, for example "255_0_0" is red color. Use "default" to use default swing color.
 	#Default for this button is "0_178_0" (dark green color).
 	upload_all_button_foreground_color = "0_178_0"
+	#Same as upload_all_button_font_size, but for Auto-Fix button (in integrated GPU warning).
+	auto_fix_button_font_size = 16
 	#Append comment text with notice about sending screenshot of this gui tells nothing to modpack creators.
 	show_dont_send_screenshot_of_gui_notice = true
 	#Same as upload_all_button_font_size, but for Request Help button.
@@ -148,4 +156,14 @@
 [compatibility]
 	#Enable feature.
 	enabled = true
+
+#Settings of analysis tools feature.
+#Here you can enable disable showing some analysis tools fot end user.
+[analysis_tools]
+	#Enable feature.
+	enabled = true
+	#Here you can disable some Analysis tools by class names.
+	#List of them can be found here: dev.kostromdan.mods.crash_assistant.app.gui.analysis
+	#For example "MCreatorModDetectorGUI"
+	blacklisted_tools = []
 
