--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -248,6 +248,9 @@ general {
         # Also patches Custom NPCs Unofficial, will log harmless errors
         B:"Enable Custom NPCs Patch"=true
         B:"Enable Custom Skin Loader Patch"=true
+
+        # Patches DarkTheme's use of internal Java reflection APIs that are not available in Java 9+
+        B:"Enable DarkTheme Patch"=true
         B:"Enable Dissolution Patch"=true
 
         # Only use with dj2addons 1.2.1.1 or lower
